--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1 classname ="bold">My vite app</h1>
+      <h2>Our vite app is loading</h2>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
